--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -10,8 +10,8 @@ steps:
         - name: dockersock
           path: /var/run/
       commands:
-        - docker build -t cr.seen.wtf/webapp .
-        - docker push cr.seen.wtf/webapp
+        - docker build -t cr.seen.wtf/aa-webapp .
+        - docker push cr.seen.wtf/aa-webapp
 
 volumes:
   - name: dockersock
