--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -5,6 +5,7 @@ name: default
 steps:
   - name: build-image
     image: docker:dind
+    privileged: true
     volumes:
       - name: dockersock
         path: /var/run/
