--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/**
-[Dd]ebugPublic/**
+[Dd]ebug/
+[Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
 x64/
@@ -27,8 +27,8 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/**
-[Oo]bj/**
+[Bb]in/
+[Oo]bj/
 [Ll]og/
 [Ll]ogs/
 
@@ -384,7 +384,7 @@ FodyWeavers.xsd
 *.msp
 
 # JetBrains Rider
-.idea/**
+.idea/
 *.sln.iml
 
 node_modules
