--- a/.gitignore
+++ b/.gitignore
@@ -387,19 +387,4 @@ FodyWeavers.xsd
 .idea/
 *.sln.iml
 
-node_modules
-
-# Default ignored files
-/shelf/
-/workspace.xml
-# Rider ignored files
-/modules.xml
-/projectSettingsUpdater.xml
-/contentModel.xml
-/.idea.webapp.iml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-
+node_modules/
