--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
   - name: semantic-release
-    image: cr.seen.wtf/semantic-release
+    image: cr.seen.wtf/semantic-release-container
     environment:
       GH_TOKEN:
         from_secret: GITHUB_TOKEN
@@ -12,20 +12,7 @@ steps:
       - name: dockersock
         path: /var/run/
     commands:
-      - apt update && apt upgrade && apt install docker.io -y
-      - npm i -g @semantic-release-plus/docker
-      - docker build -t webapp .
       - semantic-release
-    
-  - name: build-image
-    image: docker:dind
-    volumes:
-      - name: dockersock
-        path: /var/run/
-    commands:
-      - sleep 10
-      - docker build -t cr.seen.wtf/aa-webapp .
-      - docker push cr.seen.wtf/aa-webapp
 
 services:
   - name: docker
@@ -34,7 +21,6 @@ services:
     volumes:
       - name: dockersock
         path: /var/run
-
 
 volumes:
   - name: dockersock
