--- a/.releaserc
+++ b/.releaserc
@@ -31,7 +31,8 @@
             "@semantic-release/git",
             {
                 "assets": [
-                    "CHANGELOG.md"
+                    "CHANGELOG.md",
+                    "package.json"
                 ]
             }
         ]
