--- a/.releaserc
+++ b/.releaserc
@@ -13,6 +13,7 @@
                 "changelogTitle": "# Semantic Versioning Changelog"
             }
         ],
+        "@semantic-release/npm",
         [
             "@semantic-release/exec",
             {
