--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -34,3 +34,31 @@ services:
 volumes:
   - name: dockersock
     temp: {}
+
+---
+kind: pipeline
+type: kubernetes
+name: deploy
+
+steps:
+  - name: deploy
+    image: bitnami/kubectl
+    environment:
+      KUBE_CLUSTER_CERT:
+        from_secret: KUBE_CLUSTER_CERT
+      KUBE_CLIENT_CERT:
+        from_secret: KUBE_CLIENT_CERT
+      KUBE_CLIENT_KEY:
+        from_secret: KUBE_CLIENT_KEY
+    commands:
+      - sed -i "s/KUBE_CLUSTER_CERT/$KUBE_CLUSTER_CERT/g" kube_config.yml
+      - sed -i "s/KUBE_CLIENT_CERT/$KUBE_CLIENT_CERT/g" kube_config.yml
+      - sed -i "s/KUBE_CLIENT_KEY/$KUBE_CLIENT_KEY/g" kube_config.yml
+      - KUBE_CONFIG=$(pwd)/kube_config.yml && export KUBE_CONFIG
+      - kubectl rollout restart -n ucl-aa deploy aa-webapp
+
+trigger:
+  target:
+    - production
+  event:
+    - promote
