--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -35,6 +35,10 @@ volumes:
   - name: dockersock
     temp: {}
 
+trigger:
+  event:
+    - push
+
 ---
 kind: pipeline
 type: kubernetes
@@ -51,9 +55,10 @@ steps:
       KUBE_CLIENT_KEY:
         from_secret: KUBE_CLIENT_KEY
     commands:
-      - sed -i "s/KUBE_CLUSTER_CERT/$KUBE_CLUSTER_CERT/g" .drone/kube_config.yml
-      - sed -i "s/KUBE_CLIENT_CERT/$KUBE_CLIENT_CERT/g" .drone/kube_config.yml
-      - sed -i "s/KUBE_CLIENT_KEY/$KUBE_CLIENT_KEY/g" .drone/kube_config.yml
+      - echo $(pwd)
+      - sed -i "s/KUBE_CLUSTER_CERT/$KUBE_CLUSTER_CERT/g" ../.drone/kube_config.yml
+      - sed -i "s/KUBE_CLIENT_CERT/$KUBE_CLIENT_CERT/g" ../.drone/kube_config.yml
+      - sed -i "s/KUBE_CLIENT_KEY/$KUBE_CLIENT_KEY/g" ../.drone/kube_config.yml
       - KUBE_CONFIG=$(pwd)/.drone/kube_config.yml && export KUBE_CONFIG
       - kubectl rollout restart -n ucl-aa deploy aa-webapp
 
