--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -6,7 +6,7 @@ steps:
   - name: test
     image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
     commands:
-      - dotnet test WebAppTest
+      - dotnet test src/WebAppTest
 
   - name: semantic-release
     image: cr.seen.wtf/semantic-release-container
