--- a/.releaserc
+++ b/.releaserc
@@ -17,7 +17,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "docker build -t webapp -f Dockerfile src/"
+                "prepareCmd": "docker build -t aa-webapp -f Dockerfile src/"
             }
         ],
         [
